syntax = "proto3";

package ai.metathings.service.evaluatord;
option go_package = "evaluatord";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "model.proto";

message ListEvaluatorsRequest {
	OpEvaluator evaluator = 1 [(validator.field) = {msg_exists: true}];
}

message ListEvaluatorsResponse {
	repeated Evaluator evaluators = 1;
}
